Fixed alignment issues

--- a/css/index.css
+++ b/css/index.css
@@ -49,6 +49,7 @@ table {
 
 * {
     box-sizing: border-box;
+    border: 1px solid pink !important;
 }
 
 html, body {
@@ -62,32 +63,35 @@ h1, h2, h3, h4, h5 {
     font-family: 'Rubik', sans-serif;
 }
 
-header {
+#index-header {
+    margin: 0 auto;
+    padding-top: 20px;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    justify-content: space-around;
+    width: 50%;
 }
 
 div.header-div-1 {
     margin: 0 auto;
     display: flex;
-    justify-content: space-around;
-    width: 48%;
-}
-
-div.header-div-2 {
-    margin: 2% auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    align-items: flex-end;
+    justify-content: space-between;
     width: 80%;
 }
 
-.lambda-logo {
+div.header-div-2 {
+    margin: 1% auto;
     display: flex;
-    width: 20%;
-    margin-left: 1%;
     justify-content: center;
+    align-items: center;
+    width: 90%;
+}
+
+.lambda-logo {
+    margin: 0 auto;
+    display: flex;
+    width: 23%;
+    margin-left: 1%;
 }
 
 .header-nav {
@@ -98,7 +102,7 @@ div.header-div-2 {
 }
 
 .header-anchor {
-    font: black !important;
+    color: black !important;
     text-decoration: none !important;
     display: flex;
     justify-content: center;
@@ -208,13 +212,13 @@ div.box10 { background: dodgerblue; }
     padding-bottom: 1%;
     border-bottom: 1px dashed black !important;
 }
-/* Review */
+/* end of index html */
 
 body.about-page-body-container {
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
-    width: 80%;
+    flex-wrap: nowrap;
+    width: 70%;
     margin: 0 auto;
 }
 
@@ -222,29 +226,35 @@ div.about-page {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    width: 80%;
+    width: 70%;
+    margin: 0 auto;
 }
 div.box-container-within {
     display: flex;
-    justify-content: center;
     align-items: center;
+    width: 70%;
+    margin: 0 auto;
 }
 
 div.about-page-descriptors {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    justify-content: center;
-    width: 30%;
-    padding: 10px;
-    margin: 0 auto;
+    justify-content: space-between;
+    width: 50%;
+    padding: 1%;
+    margin: 2% 2%;
     color: black;
     border-bottom: 1px dashed black !important;
 }
 
 div.about-page-descriptors img {
-    max-width: 40%;
+    max-width: 100%;
     order: -1;
+}
+
+div.about-page-descriptors h2, div.about-page-descriptors p, div.about-page-descriptors.learn-more {
+    padding: 2%;
 }
 
 div.lets-work {
@@ -254,13 +264,14 @@ div.lets-work {
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
-    width: 80%;
+    width: 70%;
+    padding: 3%;
 }
 
 div.footer-div {
     margin: 0 auto;
     display: flex;
-    width: 80%;
+    width: 70%;
     background-color: white;
     justify-content: flex-start;
     align-items: center;
@@ -275,15 +286,17 @@ div.footer-div footer {
 .learn-more {
     text-decoration: none;
     color: black;
-    border: solid 1px black;
-    border-radius: 25%;
-    padding-bottom: 10px;
+    border: solid 2px black;
+    border-radius: 20%;
+    padding: 2%;
+    margin-top: 2%;
+    border-width: thick !important;
 }
 
-div.header-div-1-page-2 {
+#about-header {
     margin: 0 auto;
     padding-top: 20px;
     display: flex;
     justify-content: space-around;
-    width: 80%;
+    width: 70%;
 }
